# course-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/course-rag/: SKILL.md
app/: auth.py  config.py  corpus.py  db.py  embeddings.py  main.py  models.py  qa.py  query_expansion.py  retriever.py  schemas.py  vector_retriever.py
app/routes/: admin.py  auth.py  rag.py
data/processed/pdf_markdown/: 2026 SEME_Slides Lesson13.Software Size Measurement.md  2026 SEME_Slides Lesson14.Software Cost & Costing.md  2026_SEME_Slides Lesson01 Nature of SEM.md  2026_SEME_Slides Lesson02 Project Management & its Process.md  2026_SEME_Slides Lesson03 Scope a Software Project.md  2026_SEME_Slides Lesson04 Plan Software project.md  2026_SEME_Slides Lesson05 Launch Software Project.md  2026_SEME_Slides Lesson06 Execute & Close of software project.md  2026_SEME_Slides Lesson07 Resource allocation.md  2026_SEME_Slides Lesson08 Risk management.md  2026_SEME_Slides Lesson10 Continuous Process Improvement.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts
scripts/: build_embeddings.py  build_index.py  build_rag_corpus.py  test_admin.sh  test_basic.sh  test_batch_queries.sh  test_invite_chain.sh  test_single_connection.sh
static/: index.html
static/assets/: index-B1efE1rC.css  index-BI39IGaA.js  index-BUBp9GDB.js  index-BkbZVhME.js  index-C5_E--L-.css  index-CsLKT-lk.js  index-DNBHuBYN.js  index-DfEgPuYS.js
(+150 files in other folders)
