[project]
name = "course-rag"
version = "0.1.0"
description = "A deployable RAG system for course materials."
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.35",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "openai>=2.26.0,<3.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
